--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^19.1.5",
     "@tailwindcss/postcss": "^4.0.14",
     "express": "^4.18.2",
+    "mysql2": "^3.14.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.14",
